# rust-latency-trace

./: CHANGELOG.md  Cargo.toml  README.md  TODO.rs  bench.sh  bench_all.sh  bench_overhead_simple_real_sync.sh  gen-doc.sh  package.sh  publish.sh  readme0.md  readme1.md  run-deep-sync-comparison.sh  run-pausable.sh  run-simple-sync-comparison.sh  run-sync-comparison.sh
dev-utils/: Cargo.toml
dev-utils/src/: gater.rs  gen_random.rs  lib.rs  target_fns.rs  test_structs.rs  test_support.rs  utils.rs
dev_support/: Cargo.toml
dev_support/benches/: bench_deep_criterion.rs  bench_deep_divan.rs  bench_diff_simple_real_sync_probed_vs_joined.rs  bench_overhead_simple_real_sync.rs  bench_real_work_divan.rs  bench_simple_criterion.rs  bench_simple_divan.rs  bench_simple_real_divan.rs  bench_simple_real_j_divan.rs
dev_support/examples/: bench_diff_simple_real_sync_probed_vs_joined.rs  deep_sync.rs  default_span_grouping.rs  simple_async.rs  simple_real_sync_probed_vs_joined.rs  simple_sync.rs  simple_sync2_x.rs  simple_sync_multi_probed.rs  simple_sync_probed.rs  simple_sync_probed_multi.rs  simple_sync_probed_single.rs  simple_sync_un.rs  simple_sync_x.rs  span_grouping_by_all_fields.rs  span_grouping_by_given_fields.rs
dev_support/src/: bench_diff copy.rs  bench_diff.rs  deep_fns.rs  examples_support.rs  lib.rs  simple_fns.rs  simple_span_counter.rs  work_fns.rs
dev_support/src/bench_support/: common.rs  deep.rs  mod.rs  simple.rs  simple_real.rs  simple_real_j.rs
dev_support/src/test_support/: conditions.rs  mod.rs  runner.rs
dev_support/tests/: test_default_grouping_async.rs  test_default_grouping_sync.rs  test_grouping_by_all_fields_async.rs  test_grouping_by_all_fields_sync.rs  test_grouping_by_given_fields_async.rs  test_grouping_by_given_fields_sync.rs  test_layer_async.rs  test_layer_sync.rs  test_probed_async.rs  test_probed_sync.rs
dev_utils/: Cargo.toml
dev_utils/src/: deep_fns.rs  elab_fns.rs  lib.rs  simple_fns.rs  test_support.rs
examples/: base_example.rs  default_span_grouping.rs  examples_grouping_helper.rs  examples_support.rs  span_grouping_by_all_fields.rs  span_grouping_by_given_fields.rs
latency-trace/: Cargo.toml
latency-trace/examples/: default_span_grouping.rs  doc_async.rs  doc_sync.rs  doc_sync_pausable_nonblocking.rs  doc_sync_probed.rs  examples_support.rs  simple_async.rs  simple_async2.rs  simple_sync.rs  simple_sync2.rs  simple_sync2_x.rs  simple_sync_multi_pausable.rs  simple_sync_multi_pausable_blocking.rs  simple_sync_multi_pausable_nonblocking.rs  simple_sync_multi_probed.rs  simple_sync_pausable.rs  simple_sync_pausable_blocking.rs  simple_sync_pausable_nonblocking.rs  simple_sync_probed.rs  simple_sync_x.rs  span_grouping_by_all_fields.rs  span_grouping_by_given_fields.rs
latency-trace/src/: btreemap_ext.rs  core_internals.rs  histogram_summary.rs  latency_trace.rs  lib.rs  lib_core.rs  map.rs  map_ext.rs  measure.rs  pausable_trace.rs  probed_trace.rs  pub_itf_ext.rs  span_groupers.rs  summary_stats.rs  timings.rs  wrapper.rs
latency-trace/tests/: common.rs  test_default_grouping.rs  test_grouping_by_all_fields.rs  test_grouping_by_given_fields.rs  test_pausable_blocking.rs  test_probed.rs
latency_trace/: Cargo.toml  README.md  readme1.md  readme2.md
latency_trace/benches/: bench_deep_criterion.rs  bench_deep_divan.rs  bench_simple_criterion.rs  bench_simple_divan.rs  benchmark.rs  common_deep.rs  common_simple.rs
latency_trace/examples/: deep_sync.rs  deep_sync_un.rs  default_span_grouping.rs  doc_async.rs  doc_async_probed.rs  doc_sync.rs  doc_sync_fmt.rs  doc_sync_layered.rs  doc_sync_probed.rs  simple_async.rs  simple_sync.rs  simple_sync_multi_probed.rs  simple_sync_probed.rs  simple_sync_x.rs  span_grouping_by_all_fields.rs  span_grouping_by_given_fields.rs
latency_trace/src/: bench_support.rs  bench_support_j.rs  collect.rs  core_internals_common.rs  core_internals_post.rs  core_internals_pre.rs  core_internals_pub.rs  latency_trace.rs  latency_trace_old.rs  lib.rs  lib1.md  lib2.md  lt_collect.rs  lt_collect_g.rs  lt_pub.rs  lt_pub_g.rs  lt_pub_tokio.rs  lt_refine.rs  lt_refine_g.rs  lt_report_g.rs  lt_report_g_tokio.rs  probed_trace.rs  probed_trace_g.rs  publish.rs  refine.rs  span_groupers.rs  summary_stats.rs  tlc_param.rs  wrapper.rs
latency_trace/tests/: common.rs  test_default_grouping.rs  test_default_grouping_async.rs  test_default_grouping_sync.rs  test_grouping_by_all_fields.rs  test_grouping_by_all_fields_async.rs  test_grouping_by_all_fields_sync.rs  test_grouping_by_given_fields.rs  test_grouping_by_given_fields_async.rs  test_grouping_by_given_fields_sync.rs  test_probed.rs  test_probed_async.rs  test_probed_sync.rs
src/: latency_trace.rs  lib.rs  map.rs  measure.rs  span_groupers.rs
tests/: common.rs  test_default_grouping.rs  test_grouping_by_all_fields.rs  test_grouping_by_given_fields.rs
trials/: Cargo.toml
