[package]
name = "dev_support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures = "0.3"
sha2 = "0.10"
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1.14"
hdrhistogram = "7.5"
regex = "1.10"
latency_trace = { version = "0.5", features = ["dev", "tokio"] }

[[bench]]
name = "bench_simple_criterion"
harness = false

[[bench]]
name = "bench_deep_criterion"
harness = false

[[bench]]
name = "bench_simple_divan"
harness = false

[[bench]]
name = "bench_simple_real_divan"
harness = false

[[bench]]
name = "bench_simple_real_j_divan"
harness = false

[[bench]]
name = "bench_deep_divan"
harness = false

[[bench]]
name = "bench_real_work_divan"
harness = false

[[bench]]
name = "bench_overhead_simple_real_sync"
harness = false

[[bench]]
name = "bench_diff_simple_real_sync_probed_vs_joined"
harness = false
