[package]
name = "dev_support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1.14"
env_logger = "0.11"
futures = "0.3"
hdrhistogram = "7.5"
latency_trace = { path = "../latency_trace", features = ["dev", "tokio"] }
log = "0.4"
regex = "1.10"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# Removed "log" feature to prevent `tracng-log` from being pulled in and causing issues with `env_logger`
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }


[[bench]]
name = "bench_simple_criterion"
harness = false

[[bench]]
name = "bench_deep_criterion"
harness = false

[[bench]]
name = "bench_simple_divan"
harness = false

[[bench]]
name = "bench_simple_real_divan"
harness = false

[[bench]]
name = "bench_simple_real_j_divan"
harness = false

[[bench]]
name = "bench_deep_divan"
harness = false

[[bench]]
name = "bench_real_work_divan"
harness = false

[[bench]]
name = "bench_overhead_simple_real_sync"
harness = false

[[bench]]
name = "bench_diff_simple_real_sync_probed_vs_joined"
harness = false
