[package]
name = "latency_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# thread_local_collect = { git = "https://github.com/pvillela/rust-thread-local-collect", tag = "v0.5.0" }
thread_local_collect = { path = "../../thread-local-collect" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Removed "log" feature to prevent `tracng-log` from being pulled in and causing issues with `env_logger`
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }

# Below line replaced by above
# tracing-subscriber = "0.3"

hdrhistogram = "7.5"
log = "0.4"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }

[dev-dependencies]
dev_utils = { path = "../dev-utils" }
env_logger = "0.11"
rand = "0.8"
