[package]
name = "latency_trace"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "supports latency measurement for functions and code blocks, both sync and async."
repository = "https://github.com/pvillela/rust-latency-trace/tree/main"
readme = "README.md"
keywords = ["latency", "observability", "measurement", "tracing", "performance"]
categories = ["development-tools::profiling"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# thread_local_collect = { path = "../../thread-local-collect", version = "1.0" }
thread_local_collect = "1"
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1"

# Removed "log" feature to prevent `tracng-log` from being pulled in and causing issues with `env_logger`
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }

hdrhistogram = "7.5"
log = "0.4"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }

[features]
tokio = ["dep:tokio"]
# intended only to be used by crate 'dev_support' for code downloaded from the repo
dev = []

[package.metadata.docs.rs]
all-features = true
